--- a/css/style.css
+++ b/css/style.css
@@ -148,6 +148,78 @@ footer a{
 	padding: 0rem 2rem;
 }
 
+/*MENU*/
+  /*NOTE*/
+.first {
+	font-family: "Helvetica";
+	font-size: 1.8rem;
+	margin: 1.8rem 0rem 1rem 0rem;
+}
+#note .menu {
+	overflow: hidden;
+}
+#note h2, .restaurant__start, .restaurant__end{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+#note section {
+	display: flex;
+	flex-direction: column;
+	text-align: center;
+	margin: auto;
+	background-color: #FCDFDB;
+	box-shadow: 0px 0px 10px lightgrey;
+	width: 50rem;
+	padding: 3rem 8rem;
+	font-family: "segoe";
+}
+.restaurant__start, .restaurant__end {
+	font-family: "devonshire";
+	color: rgb(60,18,24);
+}
+.restaurant__start{
+	flex-direction: column;
+	font-size: 2rem;
+	padding-bottom: 1rem;
+}
+.restaurant__start i {
+	font-size: 4rem;
+}
+#note i {
+	padding-right: 1rem;
+}
+.restaurant__end {
+	font-size: 1.2rem;
+	padding-top: 2rem;
+}
+.menu__intitule {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: space-between;
+	padding: 2.5rem 0rem 1rem 0rem;
+}
+.menu__intitule h3 {
+	font-size: 1.8rem;
+}
+img {
+	width: 18rem;
+	height: 0.5rem;
+}
+.menu {
+	padding: 1rem 0rem;
+}
+.menu__details {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	font-size: 0.9rem;
+	line-height: 0.5rem;
+}
+.menu__details--prix {
+	font-size: 1rem;
+}
 @font-face {
 	font-family: "devonshire";
 	src:url("../font/devonshire.ttf") format("truetype"),
