--- a/css/style.css
+++ b/css/style.css
@@ -220,6 +220,12 @@ footer a:hover{
 	box-shadow: 0px 0px 10px lightgrey;
 	width: 50rem;
 }
+.intitule{
+	display: flex;
+	flex-direction: column;
+	padding: 0rem;
+	margin: 0rem;
+}
 #chic .menu, #delice .menu, #palette .menu {
 	padding: 6rem 8rem 10rem 8rem;
 }
@@ -234,6 +240,9 @@ footer a:hover{
 	align-items: center;
 	justify-content: space-between;
 	padding: 2.5rem 0rem 1rem 0rem;
+}
+.menu_intitule h3{
+	margin: 0rem;
 }
 .menu_details {
 	font-size: 0.9rem;
@@ -264,7 +273,6 @@ footer a:hover{
 }
 #note .menu h3 {
 	font-size: 1.5rem;
-	text-decoration: underline rgb(60,18,24);
 }
 
 img {
@@ -304,30 +312,33 @@ img {
 }
 
 /*--ANIMATIONS--*/
-#note .menu h3:hover {
-	text-decoration: underline rgb(60,18,24);
-	animation:line 2s;
+.line{
+	width: 0rem;
+	height: 0.2rem;
+	background-color:none;
+	position: relative;
+ 	transition: width 1s linear, background-color 1s;
 }
-#chic .menu h3:hover{
-	text-decoration: underline rgb(216,133,46);
-	animation: line 2s;
+ #note div.intitule:hover .line {
+ 	width: 100%;
+ 	background-color: rgb(60,18,24);
+ 	transition: width 1s linear, background-color 100ms;
 }
-#delice .menu h3:hover {
-	text-decoration: underline rgb(4,49,223);
-	animation: line 2s;
+#chic div.intitule:hover .line {
+ 	width: 100%;
+ 	background-color: rgb(180,80,100);
+ 	transition: width 1s linear, background-color 100ms;
 }
-#palette .menu h3:hover{
-	text-decoration: underline rgb(66,151,60);
-	background-size: 5rem;
-	transition: background-size 5s;
+#delice div.intitule:hover .line {
+ 	width: 100%;
+ 	background-color: rgb(8,135,251);
+ 	transition: width 1s linear, background-color 100ms;
 }
-#palette .menu h3 {
+#palette div.intitule:hover .line {
+ 	width: 100%;
+ 	background-color: rgb(114,191,86);
+ 	transition: width 1s linear, background-color 100ms;
 }
-@keyframes line{
-	from{text-decoration: 1px;}
-	to{text-decoration: 2px;}
-}
-
 /*--FONT--*/
 @font-face {
 	font-family: "devonshire";
